# GCS-UmemotoLab

./: .clineignore  .clinerules  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  f9p-fullmassages.txt  f9p-save.txt  nginx.conf  note.md  pyproject.toml  requirements.txt  requirements_raspi.txt  rtk_base_station.py  rtk_rtcp_receiver.py  rtk_rtcp_receiver2.py
.github/: copilot-instructions.md
app/: backend_minimal.py  backend_server.py  command_sender.py  dummy_rtcm_server.py  dummy_sitl.py  logging_config.py  main.py  server.py  test_rtk_integration.py
config/: base_station.json  config.local.example.yml  config.local.yml  config.mac.yml  config.win.yml  config.yml  gcs.yml  gcs_drone.yml  gcs_e2e_test.yml  gcs_local.yml  gcs_multidrone_example.yml  gcs_multidrone_test.yml  gcs_production.yml  gcs_raspi_bridge.yml  gcs_sshtunnel.yml  mavlink_router_raspi.conf  rtk_forwarder.yml
deploy/: can0.link  can0.network  can_setup_raspi.sh  install_rtk_uart2_service.sh  install_rtk_uart4_service.sh  install_rtk_uart5_service.sh  rtk-uart2-inject.service  rtk-uart4-inject.service  rtk-uart5-inject.service  start_raspi_services.sh  uninstall_rtk_uart2_service.sh  uninstall_rtk_uart4_service.sh  uninstall_rtk_uart5_service.sh
docs/: 2026-07-03_test_report.md  DOCUMENTATION_GUIDE.md  DRONE_FLIGHT_GUIDE.md  IMPLEMENTATION_DETAILS.md  PHASE1_COMPLETION_REPORT.md  PHASE5_RTK_NEXT_STEPS.md  PHASE7_PRODUCTION_TEST_START.md  README.md  RTK_BASE_STATION_FINAL_REPORT.md  RTK_BASE_STATION_IMPLEMENTATION.md  communication-architecture.md  design.md  dev_guide.md  issue_body.md  (+19 more)
(+171 files in other folders)
