[project]
name = "gcs-umemotolab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "pymavlink>=2.4.49",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "pyside6>=6.11.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
raspi = [
    "pymavlink>=2.4.49",
    "pyserial>=3.5",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
]
